# prolems

./: .gitignore  LICENSE  README.md  commands.sh  pyproject.toml
.github/workflows/: ci.yml
src/problems/recursive/: func_ackermann.py  palindrome.py  simple1.py  tree_simple1.py
tests/recursive/: test_func_ackermann.py  test_palindrome.py  test_simple1.py  test_tree_simple1.py
